add Heroku metadata

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,3 +28,8 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+
+[metadata.heroku]
+  root-package = "basta/revo/baco"
+  ensure = "false"
